@@ -26,6 +26,7 @@ image::https://raw.githubusercontent.com/apache/tinkerpop/master/docs/static/ima
 This release also includes changes from <<release-3-7-6, 3.7.6>>.
 
 * Fixed bug in pre-repeat() `emit()/until()` where `emit()` and `until()` traversers weren't added to the results.
+* Fixed bug in `GremlinValueComparator` that prevented collections of differing sizes from being comparable.
 * Expose serialization functions for alternative transport protocols in gremlin-go
 * Improved Gremlint formatting to keep the first argument for a step on the same line if line breaks were required to meet max line length.
 * Improved Gremlint formatting to do greedy argument packing when possible so that more arguments can appear on a single line.
@@ -35,7 +36,7 @@ This release also includes changes from <<release-3-7-6, 3.7.6>>.
 
 This release also includes changes from <<release-3-7-5, 3.7.5>>.
 
-* Added a Gremln MCP server.
+* Added a Gremlin MCP server.
 * Added the Air Routes 1.0 dataset to the set of available samples packaged with distributions.
 * Added a minimal distribution for `tinkergraph-gremlin` using the `min` classifier that doesn't include the sample datasets.
 * Removed `AggregateLocalStep` and `aggregate(Scope, String)`, and renamed `AggregateGlobalStep` to `AggregateStep`.
